z-index problem with exit game resolved.

--- a/css/hud.css
+++ b/css/hud.css
@@ -39,6 +39,7 @@
     background-color: black;
     color: white;
     cursor: pointer;
+    z-index: 999;
 }
 
 #controls {
